# bhive

./: .gitignore  config.sh
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: encode
llvm-harness/: CMakeLists.txt  llvm-harness.cpp
llvm-harness/timing-harness/: harness copy.c  harness.c  harness.h
playground/: BBs.csv  clfsh.S
timing-harness/: Makefile  harness.c  harness.h  test.c
